--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1172,7 +1172,8 @@ inject:
     - <style id="defineBg"></style> # 自定义背景选项
     - <style id="menu_shadow"></style> # 菜单发光样式
     - <script src="https://npm.elemecdn.com/echarts@4.9.0/dist/echarts.min.js"></script> # echarts
-    - <script src="https://npm.elemecdn.com/echarts@4.9.0/map/js/china.js"></script> # 绘制地图需要另外添加 china.js
+    # - <script src="https://npm.elemecdn.com/echarts@4.9.0/map/js/china.js"></script> # 绘制地图需要另外添加 china.js
+    - <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script><script>LA.init({id:"3G7PdsOcjAvosjUF",ck:"3G7PdsOcjAvosjUF",autoTrack:true,hashMode:true})</script>
 
   bottom:
     - <script src="https://cdn.staticfile.org/jquery/3.6.3/jquery.min.js"></script> # jQuery
