--- a/_config.yml
+++ b/_config.yml
@@ -203,7 +203,7 @@ baidusitemap:
   
 # 主动推送百度，被百度收录
 baidu_url_submit:
-  count: 0 # 提交最新的10个链接
+  count: 10 # 提交最新的10个链接
   host: www.cclmsy.cc # 百度站长平台中注册的域名
   token: IxGIIIqXDmqXNttS # 秘钥，百度站长平台 > 推送接口 > 接口调用地址中token字段
   path:  # 文本文档的地址， 新链接会保存在此文本文档里，不用改
@@ -275,9 +275,9 @@ magnet:
     - name: 算法竞赛
       display_name: CCの算法竞赛题解
       icon: 🍡
-    # - name: 计算机基础
-    #   display_name: 小Fの计算机基础笔记
-    #   icon: 🍼
+    - name: 笔记模板
+      display_name: CCの代码模板笔记
+      icon: 🍼
     # - name: 魔改教程
     #   display_name: 小Fの博客魔改教程
     #   icon: 🍉
