--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -29,3 +29,8 @@
 - class_name: 友人帐✨
   class_desc: 相遇即是缘分——
   link_list: 
+    - name: 虚位以待
+      link: https://www.cclmsy.cc/social/link/
+      avatar: /assets/ErrAvatar.jpg
+      descr: Waiting for u.
+      siteshot: /assets/ErrCover.webp
