--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -24,7 +24,7 @@
     - name: 安知鱼
       link: https://blog.anheyu.com/
       avatar: https://img01.anheyu.com/useruploads/90/2023/04/23/6444e85234e51.jpg
-      descr: A Simple and Card UI Design theme for Hexo
+      descr: 生活明朗，万物可爱✨
       siteshot: https://source.fomal.cc/siteshot/anzhiy.cn.jpg
 - class_name: 友人帐✨
   class_desc: 相遇即是缘分——
