--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -33,4 +33,4 @@
       link: http://lxtyin.ac.cn/
       avatar: http://lxtyin.ac.cn/img/favicon.png
       descr: Run Execllent
-      siteshot: /TMP/Siteshot/lxtyin.ac.cn.jpg
+      siteshot: https://image.thum.io/get/allowJPG/wait/20/width/600/crop/950/http://lxtyin.ac.cn/
