--- a/_config.yml
+++ b/_config.yml
@@ -278,9 +278,9 @@ magnet:
     - name: 笔记模板
       display_name: CCの代码模板笔记
       icon: 🍼
-    # - name: 魔改教程
-    #   display_name: 小Fの博客魔改教程
-    #   icon: 🍉
+    - name: 教程
+      display_name: CCの新奇玩意教程
+      icon: 🍉
     # - name: Java基础
     #   display_name: 小FのJava基础笔记
     #   icon: 🍟
