--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -17,7 +17,7 @@ menu:
     动画: /box/animation || icon-nvwumao || faa-tada
     网址导航: /box/nav || icon-zhifengche || faa-tada
   社交 || icon-shejiaoxinxi || faa-tada || hide:
-    # 朋友圈: /social/fcircle/ || icon-pengyouquan || faa-tada
+    # 我的唠叨: /social/bb || icon-qunliaotian || faa-tada
     留言板: /comments || icon-liuyan || faa-tada
     友人帐: /social/link || icon-lianjie || faa-tada
   网站 || icon-wangye || faa-tada || hide:
@@ -25,10 +25,6 @@ menu:
     文章统计: /site/echarts || icon-shujutongji1 || faa-tada
     旧时光: /site/time || icon-xianxingshalou || faa-tada
   关于: /about || icon-maoliang || faa-tada
-    # || hide:
-    # 唠叨: /personal/bb/ || icon-qunliaotian || faa-tada
-    # 恋爱小屋: /personal/love/ || icon-love-sign || faa-tada
-    # 关于: /personal/about/ || icon-paperplane || faa-tada
 
 # Code Blocks (代碼相關)
 # --------------------------------------
