--- a/_config.yml
+++ b/_config.yml
@@ -279,7 +279,7 @@ magnet:
       display_name: CCの代码模板笔记
       icon: 🍼
     - name: 教程
-      display_name: CCの新奇玩意教程
+      display_name: CCの教程
       icon: 🍉
     # - name: Java基础
     #   display_name: 小FのJava基础笔记
