--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -31,6 +31,6 @@
   link_list: 
     - name: lx_tyin
       link: http://lxtyin.ac.cn/
-      avatar: http://cclmsy.gitee.io/sourse/Images/Flinks/Avatars/lxtyin.png
+      avatar: http://source.cclmsy.cc/Images/Flinks/Avatars/lxtyin.png
       descr: Run Execllent
       siteshot: https://image.thum.io/get/allowJPG/wait/20/width/600/crop/950/http://lxtyin.ac.cn/
