--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ per_page: 10
 pagination_dir: page
 
 # Include / Exclude file(s)
-## include:/exclude: options only apply to the 'source/' folder
+## include:/exclude: options only apply to the 'source/' folder08
 include:
 exclude:
 ignore:
