--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -34,3 +34,8 @@
       avatar: http://source.cclmsy.cc/Images/Flinks/Avatars/lxtyin.png
       descr: Run Execllent
       siteshot: https://image.thum.io/get/allowJPG/wait/20/width/600/crop/950/http://lxtyin.ac.cn/
+    - name: DODOLA
+      link: https://florae006.github.io/
+      avatar: https://florae006.github.io/img/dodola.png
+      descr: ⭐️INTJ/Acmer/前端/二次元⭐️
+      siteshot: https://image.thum.io/get/allowJPG/wait/20/width/600/crop/950/https://florae006.github.io/
