--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -35,7 +35,7 @@
       descr: Run Execllent
       siteshot: https://image.thum.io/get/allowJPG/wait/20/width/600/crop/950/http://lxtyin.ac.cn/
     - name: DODOLA
-      link: https://florae006.github.io/
-      avatar: https://florae006.github.io/img/dodola.png
+      link: https://dodolalorc.cn/
+      avatar: https://dodolalorc.cn/img/dodola.png
       descr: ⭐️INTJ/Acmer/前端/二次元⭐️
-      siteshot: https://image.thum.io/get/allowJPG/wait/20/width/600/crop/950/https://florae006.github.io/
+      siteshot: https://image.thum.io/get/allowJPG/wait/20/width/600/crop/950/https://dodolalorc.cn/
