--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ abbrlink:
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://www.cclmsy.cc
+url: https://www.cclmsy.cc
 permalink: posts/:abbrlink.html
 permalink_defaults:
 pretty_urls:
